[package]
name = "xycommands"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11", features = ["json","gzip"] }
tokio = { version = "1", features = ["full"] }
html_parser = "0.6.2"
log = "0.4"
url = "2.2.2"
env_logger = "0.9.0"
urlencoding = "2.1.0"
image = "0.23.14"
tui = "0.16.0"
termion = "1.5"
